@@ -1,3 +1,8 @@
+2012-10-07  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (place-frames-from-xinerama-infos):
+	handle better no xinerama support case.
+
 2012-10-04  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/wallpaper.lisp (generate-wallpaper): Force waiting the
